--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,11 @@ body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
 }
-.margin {margin-bottom: 45px;}
+
+.margin {
+    margin-bottom: 45px;
+}
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
